--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -22,6 +22,7 @@
                 android:layout_height="66dp">
 
                 <RelativeLayout
+                    android:id="@+id/back_btn"
                     android:layout_width="134dp"
                     android:layout_height="match_parent">
 
@@ -60,7 +61,7 @@
                     app:cardCornerRadius="9dp">
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/finished_btn"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
