--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="730dp"
             android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="413dp"
                 android:layout_height="61dp"
-                android:background="#0065B3">
+                android:background="#0065B3"
+                android:visibility="visible">
 
                 <ImageView
                     android:id="@+id/imageView3"
