--- a/app/src/main/res/layout/itemview_edit.xml
+++ b/app/src/main/res/layout/itemview_edit.xml
@@ -15,7 +15,7 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="250dp">
 
             <View
                 android:id="@+id/divider3"
@@ -28,17 +28,17 @@
                 android:background="?attr/colorButtonNormal" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/delete_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="25dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="18dp"
                 app:srcCompat="@android:drawable/ic_menu_delete" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/item_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -50,38 +50,95 @@
                 android:textSize="18sp" />
 
             <RelativeLayout
+                android:id="@+id/tx_Rl"
                 android:layout_width="match_parent"
-                android:layout_height="140dp"
+                android:layout_height="180dp"
+                android:layout_below="@+id/divider3"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="0dp"
+                android:visibility="visible">
+
+                <TextView
+                    android:id="@+id/vo_tx"
+                    android:layout_width="250dp"
+                    android:layout_height="45dp"
+                    android:layout_above="@+id/me_tx"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="65dp"
+                    android:layout_marginBottom="19dp"
+                    android:gravity="center"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/me_tx"
+                    android:layout_width="250dp"
+                    android:layout_height="45dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginEnd="65dp"
+                    android:layout_marginBottom="39dp"
+                    android:gravity="center"
+                    android:textSize="24sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/et_Rl"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
                 android:layout_below="@+id/divider3"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="5dp"
-                android:layout_marginEnd="0dp">
+                android:layout_marginEnd="0dp"
+                android:visibility="gone">
 
                 <EditText
-                    android:id="@+id/editText3"
+                    android:id="@+id/vo_et"
                     android:layout_width="267dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginTop="14dp"
+                    android:layout_marginTop="25dp"
                     android:layout_marginEnd="47dp"
                     android:ems="10"
                     android:hint="vocabulary"
                     android:inputType="textPersonName" />
 
                 <EditText
-                    android:id="@+id/editText5"
+                    android:id="@+id/me_et"
                     android:layout_width="267dp"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/editText3"
+                    android:layout_below="@+id/vo_et"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginTop="21dp"
+                    android:layout_marginTop="25dp"
                     android:layout_marginEnd="47dp"
                     android:ems="10"
                     android:hint="meaning"
                     android:inputType="textPersonName" />
 
             </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/edit_btn"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="30dp"
+                android:layout_toStartOf="@+id/delete_btn"
+                android:visibility="visible"
+                app:srcCompat="@drawable/ic_create_black_24dp" />
+
+            <ImageView
+                android:id="@+id/save_btn"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="30dp"
+                android:layout_toStartOf="@+id/delete_btn"
+                android:visibility="gone"
+                app:srcCompat="@drawable/ic_save_black_24dp" />
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
